--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS + UnoCSS + shadcn</title>
-    <script>
+    <!-- <script>
       !(function () {
         var e = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches,
-          t = localStorage.getItem('use-dark') || 'system'
-        ;('"dark"' === t || (e && '"light"' !== t)) && document.documentElement.classList.toggle('dark', !0)
-      })()
-    </script>
+          t = localStorage.getItem('use-dark') || 'system';
+        ('"dark"' === t || (e && '"light"' !== t)) &&
+          document.documentElement.classList.toggle('dark', !0);
+      })();
+    </script> -->
     <style>
       html.dark {
         color-scheme: dark;
